--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 .header {
-    background-image: url('magnolia_4k_5k_hd.jpg');
+    background-image: url('Magnolia-Wallpapers-10.jpg');
     background-size: cover;
     background-position: center;
     position: relative;
