--- a/main.css
+++ b/main.css
@@ -21,3 +21,9 @@ body {
     justify-content: flex-end;
 }
 
+.header {
+    background-image: url('Magnolia-Wallpapers-10.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
