--- a/main.css
+++ b/main.css
@@ -34,5 +34,21 @@ body {
     min-width: 100%;
     left: 0;
     top: 0;
-    background: rgba(200, 200, 200, 0.5);
+    background: rgba(200, 200, 200, 0.6);
+}
+
+.description {
+	left: 50%;
+	position: absolute;
+	top: 45%;
+	transform: translate(-50%, -55%);
+	text-align: center;
+}
+.description h1 {
+	color: #86cecb;
+}
+.description p {
+	color: #fff;
+	font-size: 1.3rem;
+	line-height: 1.5;
 }
